--- a/static/style.css
+++ b/static/style.css
@@ -28,7 +28,37 @@ h3{
 .weather_stats{
     width: 100%;
 }
+form{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+input{
+    height: 2rem;
+    width: 50rem;
+    border: 0;
+
+}
+
+#submit{
+    background-color: blue;
+    margin-left: 10px;
+    align-self:center ;
+    text-align: center;
+    color: white;
+    width: 40%;
+    border:none;
+    cursor: pointer;
+}
+
+#submit:hover{
+
+    background-color: darkblue;
+
+}
+
 .footer{
+    height: 3rem;
     text-align: center;
     background-color: black;
     color: white;
