--- a/templates/index.html
+++ b/templates/index.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/style.css" >
+    
     <title>Weather app</title>
 
 </head>
 <body>
     <div class="container">
-        <h1> Weather app</h1>    
+        <h1> Weather app</h1> 
+        <h3> Enter a city to know the weather</h3>
+
         <form method="POST">
             
-            <h3> Enter a city to know the weather</h3>
-            <input  autofocus="on" autocomplete="off" type="text" name="search" id="search" placeholder="name a city to search">
+            <input  autofocus autocomplete="off" type="text" name="search" id="search" placeholder="Name a city to search">
             <input  autocomplete="off" type="submit" id="submit" placeholder="Search" >
 
         </form>
@@ -32,9 +34,12 @@
 
             {% endif %}
         </div>
-        
+        <div class="section">
+            <h2>Recent search</h2>
+            {% if  %}
 
-        
+            
+        </div> 
     </div>
 
     <footer class="footer">
