--- a/templates/index.html
+++ b/templates/index.html
@@ -34,15 +34,16 @@
 
             {% endif %}   
         </div>
+        <h2>Recent search</h2>
         <div class="section">
-            <h2>Recent search</h2>
             {% for  data in database_value %}
+
                 <div class="values">
-                    <h2>city-{{ data['City']}} </h2>
+                    <h2>city-{{ data["City"]}} </h2>
                     <p>Temperature - {{ data['Temperature'] }} *C</p>
                     <p>Pressure -  {{ data['pressure'] }} Pa</p>
                     <p>Humidity  - {{ data['Humidity'] }} %</p>
-                    <p> Visibility - {{ data['Visibility']}} m</p>
+                    <p>Visibility - {{ data['Visibility']}} m</p>
                 </div>
             {% endfor %}
         </div> 
