--- a/static/style.css
+++ b/static/style.css
@@ -64,10 +64,12 @@ header {
     background-color: #0056b3;
 }
 .current-weather {
-    background: #e9f5ff;
+    background: #ffffff;
     padding: 1.5rem;
     border-radius: 8px;
     margin-bottom: 2rem;
+    border: 1px solid black;
+    text-align: center;
 }
 
 .current-weather h2 {
