--- a/static/style.css
+++ b/static/style.css
@@ -13,6 +13,10 @@ body{
     color: #333;
     line-height: 1.6;
     min-height: 100vh;
+    background: url("/Images/{{ background_image }}") no-repeat center center fixed;
+    background-size: cover;
+    color: white;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
 }
 .container {
     flex: 1;
